--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
     "axios": "^1.7.3",
     "bcryptjs": "^2.4.3",
     "mongodb": "^6.8.0",
+    "multer": "^1.4.5-lts.1",
     "next": "14.2.5",
+    "next-connect": "^1.0.0",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
     "@types/bcryptjs": "^2.4.6",
+    "@types/multer": "^1.4.11",
     "@types/node": "^20.14.14",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18",
